--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-vue": "^2.3.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "eslint": "^8.13.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.6.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.7",
+    "prettier": "^2.6.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.0",
     "vue-tsc": "^0.29.8"
@@ -30,6 +33,7 @@
     }
   },
   "lint-staged": {
-    "*.{ts,vue}": "eslint --fix"
-  } 
+    "*.{ts,vue}": "eslint --fix",
+    "*": "prettier -w -u"
+  }
 }
