--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:markup": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
