--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,30 +19,11 @@
     "@vue/prettier/@typescript-eslint",
     "plugin:prettier/recommended"
   ],
+  // "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2021
     // "parser": '@typescript-eslint/parser',
   },
-  "plugins": [],
+  "plugins": ["@typescript-eslint", "import"],
   "rules": {}
 }
-
-// module.exports = {
-//   env: { node: true, es2021: true, browser: true },
-//   extends: [
-//     'eslint:recommended',
-//     'plugin:vue/vue3-recommended',
-//     'prettier',
-//   ],
-//   globals: {
-//     defineEmits: 'readonly',
-//     defineProps: 'readonly',
-//   },
-//   parser: 'vue-eslint-parser',
-//   parserOptions: {
-//     parser: '@typescript-eslint/parser',
-//     ecmaVersion: 2021,
-//     // sourceType: 'module',
-//   },
-//   rules: {},
-// }
